--- a/index.html
+++ b/index.html
@@ -3,24 +3,55 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-  <title>Renzo Anaya</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- favicon -->
+  <!-- Normalize -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" />
+
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+    crossorigin="anonymous" />
 
   <!-- Inter Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Renzo Anaya</title>
 </head>
 
 <body>
+  <input type="checkbox" id="menu-opener" class="menu-checkbox" />
+  <header class="header">
+    <div class="u-wrapper">
+      <div class="navbar">
+        <a class="navbar__logo" href="#">
+          Renzo Anaya
+        </a>
+        <nav class="navbar__menu">
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#stack">Stack</a></li>
+            <li><a href="#portfolio">Portafolio</a></li>
+          </ul>
+        </nav>
+        <label for="menu-opener" class="navbar__button"><i class="fas fa-hamburger"></i></label>
+      </div>
+    </div>
+  </header>
 </body>
 
 </html>
