--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
       </div>
     </div>
   </header>
+  <main class="hero">
+    <div class="u-wrapper">
+      <img src="" alt="" id="avatar" class="hero__avatar"/>
+      <h1>
+        <span class="hero__title">Renzo Anaya</span>
+        <span class="hero__subtitle">Desarrollador de Software</span>
+      </h1>
+      <a class="hero__links" href="#"><i class="fab fa-github"></i></a>
+    </div>
+  </main>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
