Add responsive behavior to header.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
   <header class="header">
     <div class="u-wrapper">
       <div class="navbar">
-        <a class="navbar__logo" href="#">
-          Renzo Anaya
-        </a>
+        <div class="navbar__fixed-content">
+          <a class="navbar__logo" href="#">
+            Renzo Anaya
+          </a>
+          <label for="menu-opener" class="navbar__button"><i class="fas fa-hamburger"></i></label>
+        </div>
         <nav class="navbar__menu">
           <ul>
             <li><a href="#">Inicio</a></li>
@@ -48,13 +51,12 @@
             <li><a href="#portfolio">Portafolio</a></li>
           </ul>
         </nav>
-        <label for="menu-opener" class="navbar__button"><i class="fas fa-hamburger"></i></label>
       </div>
     </div>
   </header>
   <main class="hero">
     <div class="u-wrapper">
-      <img src="" alt="" id="avatar" class="hero__avatar"/>
+      <img src="" alt="" id="avatar" class="hero__avatar" />
       <h1>
         <span class="hero__title">Renzo Anaya</span>
         <span class="hero__subtitle">Desarrollador de Software</span>
@@ -62,6 +64,10 @@
       <a class="hero__links" href="#"><i class="fab fa-github"></i></a>
     </div>
   </main>
+  <section class="stack">
+    <div class="u-wrapper">
+    </div>
+  </section>
   <script src="js/app.js"></script>
 </body>
 
