Add stack section and backend stack.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <input type="checkbox" id="menu-opener" class="menu-checkbox" />
+  <input type="checkbox" id="menu-opener" class="menu-checkbox" checked="" />
   <header class="header">
     <div class="u-wrapper">
       <div class="navbar">
@@ -64,8 +64,36 @@
       <a class="hero__links" href="#"><i class="fab fa-github"></i></a>
     </div>
   </main>
-  <section class="stack">
+  <section id="stack" class="stack">
     <div class="u-wrapper">
+      <h2 class="section__title section__title--green">Stack</h2>
+      <h3 class="section__subtitle">Backend</h3>
+      <div class="stack__grid">
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/php.png" alt="PHP">
+          </div>
+          <p class="stack__grid__card__content">PHP</p>
+        </div>
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/laravel.png" alt="Laravel">
+          </div>
+          <p class="stack__grid__card__content">Laravel</p>
+        </div>
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/nodejs.png" alt="Node.js">
+          </div>
+          <p class="stack__grid__card__content">Node.js</p>
+        </div>
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/express.png" alt="Express">
+          </div>
+          <p class="stack__grid__card__content">Express</p>
+        </div>
+      </div>
     </div>
   </section>
   <script src="js/app.js"></script>
