Add frontend stack.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,27 @@
           <p class="stack__grid__card__content">Express</p>
         </div>
       </div>
+      <h3 class="section__subtitle">Frontend</h3>
+      <div class="stack__grid">
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/JavaScript.png" alt="JavaScript">
+          </div>
+          <p class="stack__grid__card__content">JavaScript</p>
+        </div>
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/HTML.png" alt="HTML">
+          </div>
+          <p class="stack__grid__card__content">HTML</p>
+        </div>
+        <div class="stack__grid__card">
+          <div class="stack__grid__card__body">
+            <img class="stack__grid__card__body__image" src="img/css.png" alt="CSS">
+          </div>
+          <p class="stack__grid__card__content">CSS</p>
+        </div>
+      </div>
     </div>
   </section>
   <script src="js/app.js"></script>
