Add header box shadow with animation.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
   <input type="checkbox" id="menu-opener" class="menu-checkbox" checked="" />
-  <header class="header">
+  <header id="header" class="header">
     <div class="u-wrapper">
       <div class="navbar">
         <div class="navbar__fixed-content">
