--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <input type="checkbox" id="menu-opener" class="menu-checkbox" checked="" />
+  <input type="checkbox" id="menu-opener" class="menu-checkbox" />
   <header id="header" class="header">
     <div class="u-wrapper">
       <div class="navbar">
