--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
               <small>Node.js | JavaScript | MongoDB | Express</small>
             </div>
           </div>
-          <p class="section__grid__card__content">Servicio web RESTful de un Blog con roles y permisos, y autenticacion vía JSON Web Token</p>
+          <div class="section__grid__card__content">
+            <p>Servicio web RESTful de un Blog con roles y permisos, y autenticacion vía JSON Web Token</p>
+            <a class="section__grid__card__content__button">
+              Código</a>
+          </div>
         </div>
       </div>
     </div>
