Add spacex protfolio project

--- a/index.html
+++ b/index.html
@@ -217,6 +217,42 @@
               >
             </div>
           </div>
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <h3 class="section__grid__card__body__title">
+                SpaceX Rockets Rolodex
+              </h3>
+              <div class="section__grid__card__body__tags">
+                <small>React</small>
+              </div>
+            </div>
+            <div class="section__grid__card__content">
+              <div class="section__grid__card__content__image__container">
+                <img
+                  class="section__grid__card__content__image"
+                  src="img/spacex-rocket-rolodex.png"
+                />
+              </div>
+              <p>
+                Proyecto hecho con React el cual consume la API de SpaceX y
+                realiza un filtro para buscar cohetes por nombre.
+              </p>
+              <a
+                class="section__grid__card__content__button"
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://ranayas.github.io/spacex-rockets-rolodex/"
+                >Live</a
+              >
+              <a
+                class="section__grid__card__content__button"
+                href="https://github.com/ranayas/spacex-rockets-rolodex"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Código</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </section>
