add xclothes project

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="section__grid__card__body__image section__grid__card__body__image--w-5"
+                class="
+                  section__grid__card__body__image
+                  section__grid__card__body__image--w-5
+                "
                 src="img/laravel.png"
                 alt="Laravel"
               />
@@ -100,7 +103,10 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="section__grid__card__body__image section__grid__card__body__image--w-5"
+                class="
+                  section__grid__card__body__image
+                  section__grid__card__body__image--w-5
+                "
                 src="img/nodejs.png"
                 alt="Node.js"
               />
@@ -110,7 +116,10 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="section__grid__card__body__image section__grid__card__body__image--w-5"
+                class="
+                  section__grid__card__body__image
+                  section__grid__card__body__image--w-5
+                "
                 src="img/express.png"
                 alt="Express"
               />
@@ -123,7 +132,10 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="section__grid__card__body__image section__grid__card__body__image--w-5"
+                class="
+                  section__grid__card__body__image
+                  section__grid__card__body__image--w-5
+                "
                 src="img/JavaScript.png"
                 alt="JavaScript"
               />
@@ -132,7 +144,10 @@
           </div>
           <div class="section__grid__card">
             <img
-              class="section__grid__card__body__image section__grid__card__body__image--w-5"
+              class="
+                section__grid__card__body__image
+                section__grid__card__body__image--w-5
+              "
               src="img/HTML.png"
               alt="HTML"
             />
@@ -141,7 +156,10 @@
           <div class="section__grid__card">
             <div class="section__grid__card__body">
               <img
-                class="section__grid__card__body__image section__grid__card__body__image--w-5"
+                class="
+                  section__grid__card__body__image
+                  section__grid__card__body__image--w-5
+                "
                 src="img/css.png"
                 alt="CSS"
               />
@@ -188,7 +206,9 @@
           </div>
           <div class="section__grid__card">
             <div class="section__grid__card__body">
-              <h3 class="section__grid__card__body__title">xClothes</h3>
+              <h3 class="section__grid__card__body__title">
+                Modelo de tienda de ropa
+              </h3>
               <div class="section__grid__card__body__tags">
                 <small>HTML | CSS</small>
               </div>
@@ -197,7 +217,7 @@
               <div class="section__grid__card__content__image__container">
                 <img
                   class="section__grid__card__content__image"
-                  src="img/xclothes.png"
+                  src="img/modelo-tienda-ropa.png"
                 />
               </div>
               <p>Modelo de Tienda de ropa.</p>
@@ -250,6 +270,45 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >Código</a
+              >
+            </div>
+          </div>
+
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <h3 class="section__grid__card__body__title">xclothes</h3>
+              <div class="section__grid__card__body__tags">
+                <small>React | Node | MongoDB | Express | Redux</small>
+              </div>
+            </div>
+            <div class="section__grid__card__content">
+              <div class="section__grid__card__content__image__container">
+                <img
+                  class="section__grid__card__content__image"
+                  src="img/xclothes.png"
+                />
+              </div>
+              <p>Tienda de ropa</p>
+              <a
+                class="section__grid__card__content__button"
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://ranayas.github.io/xclothes-frontend/#"
+                >Live</a
+              >
+              <a
+                class="section__grid__card__content__button"
+                href="https://github.com/ranayas/xclothes-frontend"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Código frontend</a
+              >
+              <a
+                class="section__grid__card__content__button"
+                href="https://github.com/ranayas/xclothes-backend"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Código backend</a
               >
             </div>
           </div>
