--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
           <span class="hero__title">Renzo Anaya</span>
           <span class="hero__subtitle">Desarrollador de Software</span>
         </h1>
-        <a class="hero__links" href="#"><i class="fab fa-github"></i></a>
+        <a class="hero__links" href="https://github.com/ranayas" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a
+          class="hero__links"
+          href="https://www.linkedin.com/in/ranayas/"
+          target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
       </div>
     </main>
     <section id="stack" class="section">
