add react to stack

--- a/index.html
+++ b/index.html
@@ -173,6 +173,19 @@
             </div>
             <p class="section__grid__card__content">CSS</p>
           </div>
+          <div class="section__grid__card">
+            <div class="section__grid__card__body">
+              <img
+                class="
+                  section__grid__card__body__image
+                  section__grid__card__body__image--w-5
+                "
+                src="img/react.png"
+                alt="React"
+              />
+            </div>
+            <p class="section__grid__card__content">React</p>
+          </div>
         </div>
       </div>
     </section>
